# OnePTeam

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
onep/: __init__.py  config.py  main.py
onep/agents/: __init__.py  analyzer.py  architect.py  designer.py  developer.py  devops.py  pm.py  registry.py  strategy_architect.py  tester.py
onep/cli/: __init__.py  analyze.py  create.py  export_cmd.py  memory_cmd.py  optimize_cmd.py  show.py  status.py  strategy_cmd.py
onep/llm/: __init__.py  adapters.py  cost.py  router.py
onep/memory/: __init__.py  context.py  embeddings.py  hooks.py  manager.py  query_expansion.py  schema.py  search.py
onep/orchestrator/: __init__.py  brownfield.py  crew.py  greenfield.py  runner.py
onep/persistence/: __init__.py  database.py  models.py  state.py
onep/strategy/: __init__.py  analyzer.py  git_session.py  models.py  optimize_coordinator.py  optimize_engine.py  optimize_models.py  optimize_recorder.py  persistence.py  pipeline_state.py  plan_scheduler.py  planner.py  project_context.py  reporting.py  retry.py  reviewer.py  scan_cache.py  scanner.py  test_runner.py  workbench.py
onep/subflows/: __init__.py  code_review.py  test_retry.py
onep/tools/: __init__.py  base.py  docker.py  edit.py  filesystem.py  git.py  grep.py  lint.py  memory.py  shell.py
tests/: __init__.py  test_config.py
tests/test_agents/: test_memory_tools.py  test_registry.py
tests/test_cli/: __init__.py  test_analyze_export.py  test_create.py  test_export.py  test_optimize.py  test_optimize_flow.py  test_status.py
(+60 files in other folders)
